k8s/advance/frontend-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 8080
